--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ html {
   height: 100%;
   width: 100%;
 }
+.phandau{color: purple;background-color:black;text-align:center;padding:20px}
+.thucdon{float:left;color:black;background-color:purple;text-align:center;padding:}
+.thucdon a{display:block;color:black;background-color:purple;text-align:center}
+.thucdon a:hover{color:purple;background-color:black;text-align:center}
+.noidung{color:purple;background-color:yellow}
